@@ -429,6 +429,8 @@ if test x_$withval != x_no; then
 	fi
 fi
 
+# check for library used by libevent after 1.3c
+AC_CHECK_LIB(rt, clock_gettime)
 # check for libevent
 AC_ARG_WITH(libevent, AC_HELP_STRING([--with-libevent=pathname],
     [set path to libevent  (will check /usr/local /usr/lib /usr/pkg /usr/sfw /usr)]),
@@ -482,7 +484,6 @@ fi
 # check to see if libraries are needed for these functions.
 AC_CHECK_LIB(socket, socket)
 AC_CHECK_LIB(nsl, inet_pton)
-AC_CHECK_LIB(rt, clock_gettime)
 
 AC_FUNC_CHOWN
 AC_FUNC_FORK
